css/components/sidebar.css
.sidebar {
    margin-bottom: 15px;
    max-height: 112px;
    overflow: hidden;
    padding: 15px;
    transition: var(--transition2);
}

.sidebar.active {
    max-height: 405px;
}

.sidebar-info {
    position: relative;
    display: flex;
    justify-content: flex-start;
    align-items: center;
    gap: 15px;
}

.avatar-box {
    width: 100%;
    height: 100%;
    max-width: 150px;
    max-height: 150px;
    object-fit: cover;
    border-radius: 50%;
    clip-path: circle(50% at center);
}

.avatar-box img {
    width: 100%;
    height: 100%;
    object-fit: cover;
}

.info-content .name {
    color: var(--main-text-2);
    font-size: var(--fs3);
    font-weight: var(--fw500);
    letter-spacing: -0.25px;
    margin-bottom: 10px;
}

.info-content .title {
    color: var(--main-text-1);
    background: var(--onyx);
    font-size: var(--fs8);
    font-weight: var(--fw300);
    width: max-content;
    padding: 3px 12px;
    border-radius: 8px;
}

.info-more-btn {
    position: absolute;
    top: -15px;
    right: -15px;
    border-radius: 0 15px;
    font-size: 13px;
    color: var(--selection-background);
    background: var(--border-gradient-onyx);
    padding: 10px;
    box-shadow: var(--shadow2);
    transition: var(--transition1);
    z-index: 1;
}

.info-more-btn::before {
    content: '';
    position: absolute;
    inset: 1px;
    border-radius: inherit;
    background: var(--bg-gradient-jet);
    transition: var(--transition1);
    z-index: -1;
}

.info-more-btn:hover,
.info-more-btn:focus {
    background: var(--bg-gradient-1);
}

.info-more-btn:hover::before,
.info-more-btn:focus::before {
    background: var(--bg-gradient-2);
}

.info-more-btn span {
    display: none;
}

.sidebar-info-more {
    opacity: 0;
    visibility: hidden;
    transition: var(--transition2);
}

.sidebar.active .sidebar-info-more {
    opacity: 1;
    visibility: visible;
}

.contacts-list {
    display: grid;
    grid-template-columns: 1fr;
    gap: 16px;
}

.contact-item {
    min-width: 100%;
    display: flex;
    align-items: center;
    gap: 16px;
}

.contact-info {
    max-width: calc(100% - 46px);
    width: calc(100% - 46px);
}

.contact-info :is(.contact-link, time, address) {
    color: var(--main-text-2);
    font-size: var(--fs7);
}

.contact-info address {
    font-style: normal;
}

.contact-title {
    color: var(--light-gray70);
    font-size: var(--fs8);
    text-transform: uppercase;
    margin-bottom: 2px;
}

.social-list {
    display: flex;
    justify-content: flex-start;
    align-items: center;
    gap: 15px;
    padding-bottom: 4px;
    padding-left: 7px;
}

.social-item .social-link {
    color: var(--light-gray70);
    font-size: 18px;
    transition: color var(--transition1);
}

.social-item .social-link:hover {
    color: var(--light-gray);
}

/* Sidebar-specific responsiveness */
@media (min-width: 580px) {
    .sidebar {
        max-height: 180px;
        margin-bottom: 30px;
    }

    .sidebar.active {
        max-height: 584px;
    }

    .sidebar-info {
        gap: 25px;
    }

    /* .avatar-box {
        border-radius: 30px;
        clip-path: none;
    }

    .avatar-box img {
        width: 150px;
    } */

    .info-content .name {
        margin-bottom: 15px;
    }

    .info-content .title {
        padding: 5px 10px;
    }

    .info-more-btn {
        top: 0;
        /* -30px; */
        right: 0;
        /* padding: 10px 15px; */
    }

    .info-more-btn span {
        display: block;
        font-size: var(--fs8);
    }

    .info-more-btn ion-icon {
        display: none;
    }

    .contacts-list {
        gap: 20px;
    }

    .contact-info {
        max-width: calc(100% - 64px);
        width: calc(100% - 64px);
    }
}

@media (min-width: 768px) {
    .contacts-list {
        grid-template-columns: 1fr 1fr;
        gap: 30px 15px;
    }
}

@media (min-width: 1250px) {
    .sidebar {
        position: sticky;
        top: 60px;
        max-height: max-content;
        height: 100%;
        margin-bottom: 0;
        padding-top: 60px;
        z-index: 1;
    }

    .sidebar-info {
        flex-direction: column;
    }

    /* .avatar-box img {
        width: 150px;
    } */

    .info-content .name {
        white-space: nowrap;
        text-align: center;
    }

    .info-content .title {
        margin: auto;
    }

    .info-more-btn {
        display: none;
    }

    .sidebar-info-more {
        opacity: 1;
        visibility: visible;
    }

    .contacts-list {
        grid-template-columns: 1fr;
    }

    .contact-info :is(.contact-link) {
        white-space: nowrap;
        overflow: hidden;
        text-overflow: ellipsis;
    }

    .contact-info :is(.contact-link, time, address) {
        --fs7: 14px;
        font-weight: var(--fw300);
    }

    .separator:last-of-type {
        margin: 15px 0;
        opacity: 0;
    }

    .social-list {
        justify-content: center;
    }
}

